change the url from  index to cart

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <nav>
             <ul>
               <a href="../index.html"><li>Accueil</li></a>
-              <a href="./cart.html"><li>Panier</li></a>
+              <a href="./html/cart.html"><li>Panier</li></a>
             </ul>
           </nav>
         </div>
